--- a/creditos.html
+++ b/creditos.html
@@ -31,7 +31,8 @@
     <h3> Creditos</h3>
 	<div>
 		Los autores de esta página son Asier Blázquez y Issur Sánchez, estudiantes de Grado en Ingenieria Informatica en la Facultad de San Sebastian UPV/EHU. <br><br>
-					<img src="img/Usuario-Icono.jpg" width="100">
+					<img src="img/Usuario-Icono.jpg" alt="Asier Blázquez" width="200">
+					<img src="img/Usuario-Icono.jpg" alt="Issur Sanchez" width="200">
 
 	</div>
 
