falta patern email

--- a/preguntas.html
+++ b/preguntas.html
@@ -46,7 +46,7 @@
 	<fieldset>
 
 <form id="fpreguntas" name="fpreguntas" action="prueba.php" style="background-color: white; text-align: left;">
-	Email*:<input type="text" name="email" id="email" class="entrada" placeholder="email123@ikasle.ehu.eus"><br>
+	Email*:<input type="text" name="email" id="email" class="entrada"><br>
 	Enunciado de la pregunta*: <input type="text" name="enunciado" id="enunciado" class="entrada"><br>
 	Respuesta Correcta*: <input type="text" name="respcorrecta" id="respcorrecta" class="entrada"><br>
 	Respuesta Incorrecta*: <input type="text" name="respincorrecta1" id="respincorrecta1" class="entrada"><br>
