--- a/preguntas.html
+++ b/preguntas.html
@@ -76,7 +76,7 @@
 
 <script>
 
-var expresionemail = new RegExp(/^([a-zA-Z])+\d{3}\@ikasle.ehu\.(eus)/)
+var expresionemail = new RegExp([a-z]{3,200}[0-9]{3}@ikasle.ehu+\.eus$);
 
 	$("#fpreguntas").submit(function(){
 			
